finished CRUD concept, at this stage redux work, mongoose and router works perfect

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start":"NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon index.js",
+    "start": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
