--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "jss-rtl": "^0.3.0",
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
