--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "i18next": "^21.8.11",
+    "i18next-browser-languagedetector": "^6.1.4",
     "js-cookie": "^3.0.1",
     "jss-rtl": "^0.3.0",
     "material-ui-chip-input": "^1.1.0",
@@ -24,6 +26,7 @@
     "react-dom": "^18.1.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
+    "react-i18next": "^11.17.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
