--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
@@ -29,6 +30,7 @@
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "qs": "^6.10.5"
