--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.17.3",
+    "react-reactions": "^0.1.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
